# Vector_dot_product_parallei

./: CMakeLists.txt  Vector_dot_par.cpp  Vector_dot_par.h  Vector_dot_par_SIMD.cpp  Vector_dot_par_SIMD.h  Vector_dot_seq.cpp  Vector_dot_seq.h  main.cpp
